--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
+    "sonner": "^1.4.41",
     "stripe": "^14.21.0",
     "tailwindcss": "^3.4.1",
     "toast": "^0.5.4",
